--- a/package.json
+++ b/package.json
@@ -1,57 +1,61 @@
 {
-  "name": "angular-crud",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "prettier": "prettier --write \"**/*.{js,json,css,scss,less,md,ts,html,component.html}\"",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "bootstrap": "^5.1.1",
-    "jquery": "^3.6.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.6",
-    "@angular/cli": "~12.2.6",
-    "@angular/compiler-cli": "~12.2.0",
-    "@schuchard/prettier": "^5.1.0",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
-    "husky": "7.0.2",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "lint-staged": "11.1.2",
-    "prettier": "2.4.1",
-    "tslint-config-prettier": "1.18.0",
-    "typescript": "~4.3.5"
-  },
-  "husky": {
-      "hooks": {
-        "pre-commit": "lint-staged"
-      }
+    "name": "angular-crud",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "prettier": "prettier --write \"**/*.{js,json,css,scss,less,md,ts,html,component.html}\"",
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test",
+        "generate": "node ./server/generate.js > ./server/database.json",
+        "server": "json-server --watch ./server/database.json"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~12.2.0",
+        "@angular/common": "~12.2.0",
+        "@angular/compiler": "~12.2.0",
+        "@angular/core": "~12.2.0",
+        "@angular/forms": "~12.2.0",
+        "@angular/platform-browser": "~12.2.0",
+        "@angular/platform-browser-dynamic": "~12.2.0",
+        "@angular/router": "~12.2.0",
+        "bootstrap": "^5.1.1",
+        "faker": "^5.5.3",
+        "jquery": "^3.6.0",
+        "json-server": "^0.16.3",
+        "rxjs": "~6.6.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~12.2.6",
+        "@angular/cli": "~12.2.6",
+        "@angular/compiler-cli": "~12.2.0",
+        "@schuchard/prettier": "^5.1.0",
+        "@types/jasmine": "~3.8.0",
+        "@types/node": "^12.11.1",
+        "husky": "7.0.2",
+        "jasmine-core": "~3.8.0",
+        "karma": "~6.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.0.3",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "~1.7.0",
+        "lint-staged": "11.1.2",
+        "prettier": "2.4.1",
+        "tslint-config-prettier": "1.18.0",
+        "typescript": "~4.3.5"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
     },
     "lint-staged": {
-      "*.{js,json,css,scss,less,md,ts,html,component.html}": [
-        "prettier --write"
-      ]
+        "*.{js,json,css,scss,less,md,ts,html,component.html}": [
+            "prettier --write"
+        ]
     }
-  }
+}
